--- a/res/config.ini
+++ b/res/config.ini
@@ -9,10 +9,17 @@ min_lvl=1
 path=./crash
 
 [ctp]
-addr=127.0.0.1:8080
-addr_alternate1=127.0.0.1:8080
-addr_alternate2=127.0.0.1:8080
+addr=tcp://218.28.130.102:41413
+addr_alternate1=tcp://218.28.130.102:41413
+addr_alternate2=tcp://218.28.130.102:41413
 instruments_file=./instruments.txt
 flow_market_data_path=./flow/md
 use_udp=false
 use_multicast=false
+connect_timeout_ms=5000
+login_retry_times=1
+login_retry_interval_ms=1000
+
+[async]
+pool_size=4
+md_reserved=1024
