switch to dev branch

--- a/.env
+++ b/.env
@@ -1,12 +1,9 @@
-PACKAGE_NAME=livermore-ctp
+PACKAGE_NAME=xxx
 PACKAGE_VERSION_MAJOR=0
 PACKAGE_VERSION_MINOR=0
 PACKAGE_VERSION_PATCH=1
-PACKAGE_BUGREPORT=https://github.com/hanjingo/livermore-ctp/issues
+PACKAGE_BUGREPORT=https://github.com/hanjingo/high-jump/issues
 PACKAGE_CONTACT=hehehunanchina@live.com
 PACKAGE_VENDOR=hanjingo
 PACKAGE_RESOURCE_FILE_LICENSE=LICENSE
-PACKAGE_DESCRIPTION_SUMMARY=The livermore-ctp project
-LANGUAGE_LOCALE=en_US
-LIC_ISSUER=hehehunanchina@live.com
-LIC_FPATH=./license.lic
+PACKAGE_DESCRIPTION_SUMMARY=The xxx SDK project
